# Qt-lab-2

./: README.md
Calendar remainder/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
Repeating tickets/: main_window.cpp  main_window.h
